@@ -1,3 +1,11 @@
+2009-07-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	* src/hd-notification-manager.c
+	(hd_notification_manager_setup_interface): New function to set up the
+	D-Bus proxy.
+	(hd_notification_manager_init): Connect to the system bus as well and
+	provide the interface there also.
+
 2009-07-07  Aapo Kojo <aapo.kojo@nokia.com>
 
 	Released 0.3.38
